# Yorker-AI

./: .gitignore  PRD.md  README.md  deploy_to_hf.py  push_all.sh  pyproject.toml
artifacts/data_quality/: data_quality_by_season.csv  data_quality_summary.json  feature_missingness.csv
artifacts/models/: benchmark_by_season.csv  benchmark_metrics.json  benchmark_report.md  best_config.json  current_points_table.csv  evaluation_metrics.json  feature_availability_audit.csv  feature_columns.json  fixture_explanations.json  season_simulation.csv  season_simulation.json  upcoming_predictions.csv  validation_predictions.csv
dashboard/: app.js  index.html  style.css
data/raw/official/: 2026_schedule.js
docs/research/: 00_mvp_audit.md  01_data_catalog.md  02_feature_catalog.md  03_benchmark_report.md
hf_space/: README.md  index.html  style.css
reports/twitter/: summary.json  thread.md
src/: boost_accuracy.py  download_data.py
src/ipl_ml/: benchmark.py  cli.py  constants.py  data.py  feature_registry.py  features.py  model.py  pipeline.py  reporting.py
